# Gymnasium

./: .env  .env_example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  logging_config.py  manage.py  nginx.conf  pyproject.toml  render.yaml  req.txt  requirements.txt
.github/workflows/: django.yml
Gimnasium/: .settings.py.swp  asgi.py  jazzmin_settings.py  settings.py  urls.py  wsgi.py  yasg.py
gimnasium_venv/: pyvenv.cfg
gimnasium_venv/Scripts/: activate  activate.bat
main/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  translation.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_gallery_images_alter_graduates_image_and_more.py  0002_alter_students_olympian_status.py  0002_alter_students_school_class.py  0002_customuser.py  0002_remove_graduates_ort_ky_remove_graduates_ort_ru_and_more.py  0002_remove_students_olympian_status_ky_and_more.py  0003_alter_gimnasiumclass_options_and_more.py  0003_alter_graduates_year.py  0003_alter_students_administrator_status_and_more.py  0003_students_name.py  0003_thanksnotefromgraduates_content_ky_and_more.py  0004_alter_nameofgrades_grade.py  0004_alter_teachers_experience.py  0004_remove_teachers_user_alter_teachers_successes.py  0005_administratortypes_choosing_ky_and_more.py  0005_alter_gimnasiumclass_student.py  0016_olympians_name.py  (+25 more)
secondary/: admin.py  models.py  serializers.py  urls.py  views.py
staticfiles/: staticfiles.json
users/: adapters.py  admin.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
(+29 files in other folders)
