[tool.poetry]
name = "gimnasium"
version = "0.1.0"
description = ""
authors = ["devbelek <belekasrarov10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "42.0.8"
django = "5.0.6"
django-allauth = "0.63.3"
django-filter = "24.2"
django-jazzmin = "3.0.0"
django-modeltranslation = "0.19.5"
djangorestframework = "3.15.2"
drf-yasg = "1.21.7"
et-xmlfile = "1.1.0"
idna = "3.7"
inflection = "0.5.1"
openpyxl = "3.1.5"
packaging = "24.1"
pillow = "10.4.0"
pycparser = "2.22"
pyjwt = "2.8.0"
pytz = "2024.1"
pyyaml = "6.0.1"
requests = "2.32.3"
sqlparse = "0.5.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uritemplate = "4.1.1"
urllib3 = "2.2.2"
setuptools = "^70.3.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
